--- a/markdown/01.home.md
+++ b/markdown/01.home.md
@@ -1,1 +1,5 @@
 # Hello there
+
+```
+git pull origin master && node /var/www/static-generator/src/index.js -t /var/www/einarvalur.co/mch/view/layout.html -i /var/www/einarvalur.co/mch/markdown -o /var/www/einarvalur.co/mch/public/
+```
